<resources>
    <string name="app_name">MCOE-IT</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_loading_screen">LoadingScreen</string>
    <string name="about_us">The Information Technology department of P.E.S\'s Modern College of Engineering, Pune started in 2006 with an intake capacity of 60 students. This later increased to 120 from the year 2011–2012. The department of Information Technology at P.E.S\'s Modern College of Engineering is one of the few professionally runs premier Institutes working for the accomplishment of a mission to develop skilled IT professionals, by offering value-based quality education.</string>
    <string name="email"><u>pesmcoe@moderncoe.edu.in</u></string>
    <string name="aboutUs">Information Technology department of P.E.S\'s Modern College of Engineering, Pune started in 2006 with an intake capacity of 60 students. This later increased to 120 from the year 2011–2012.\n\u000D\nThe department of Information Technology at P.E.S\'s Modern College of Engineering is one of the few professionally runs premier Institutes working for the accomplishment of a mission to develop skilled IT professionals, by offering value-based quality education. The Department has made rapid strides as department of excellence for providing modern technical education intensive and meaningful teaching methods as well as regular inputs from practicing corporate. To built-up individual initiative, creativity, talent, leadership and the capability to adopt new Technology the Department encourage the student and staff member to participate and organized the on regular basis seminar, work-shop and many other short-term courses. Our endeavor is to inculcate a desire for continuous improvement, a sense of healthy competition and sensitivity towards ethical and moral values.\n\nThe IT department is dedicated to uphold the following objectives: To develop conceptual and analytical skills in all functional areas of Information Technology, provide platform of high academic excellence to all students, encourage understanding of the strategic perceptions of the fast changing global scenario, develop the ability to understand and apply a multi-dimensional approach to achieve the overall mission of the organization and impart ethical and moral values for social well-being.\u000D\n\u000D\nDuring previous year, faculty members have presented and published papers at National and International Conferences and in journals.\u000D\n\nThe department has seven fully equipped laboratories, with sufficient systems networked via professional servers like Windows 2003 server, backup server, Linux Server and Oracle Server. Multi-lab, Internet facility and high-end multimedia workstations help the students to prepare their projects and presentations. The IT department offers high speed LAN connectivity and 24x7 power back up to ensure uninterrupted working. The student computer ratio of 1:1 in the Institute ensures adequate practical training opportunities for all students.</string>
    <string name="fe_syl"><font size="20"><b>Semester-I Subjects:</b> </font>  \n\u2022Engineering Mathematics-I \n\u2022Engineering Physics/Engineering Chemistry\n\u2022Systems in Mechanical Engineering\n\u2022Basic Electrical Engineering/Basic Electronics Engineering \n\u2022Programming and Problem Solving/Engineering Mechanics\n\u2022Workshop\n\u2022Audit Course-1 \n\n <font size="20"><b>Semester-II Subjects:</b></font>\n\u2022Engineering Mathematics-II\n\u2022Engineering Physics /Engineering Chemistry\n\u2022Basic Electrical Engineering / Basic Electronics Engineering\n\u2022Programming and Problem Solving / Engineering Mechanics\n\u2022Engineering Graphics\n\u2022Project Based Learning\n\u2022Audit Course-2\n</string>
    <string name="downFE"><u>Download Detailed Syllabus Of FE</u></string>
    <string name="se_sylabus"><font size="20"><b>Semester-I Subjects:</b> </font>  \n\u2022Discrete Mathematics \n\u2022Logic Design and
Computer Organization\n\u2022Data Structures and Algorithms\n\u2022Object Oriented Programming\n\u2022Basics of Computer Network\n\u2022Logic Design Computer Organization Lab\n\u202Data Structures and Algorithms Lab\n\u2022Object Oriented Programming Lab\n\u2022Soft Skill Lab \n\u2022Mandatory Audit Course-3\n\n <font size="20"><b>Semester-II Subjects:</b></font>\n\u2022Engineering Mathematics-III\n\u2022Processor Architecture\n\u2022Database Management System\n\u2022Computer Graphics\n\u2022Software Engineering\n\u2022Programming Skill Development Lab\n\u2022Database Management System Lab\n\u2022Computer Graphics Lab\n\u2022Project Based Learning\n\u2022Mandatory Audit Course-4\n</string>
    <string name="downSE"><u>Download Detailed Syllabus Of SE</u></string>
    <string name="te_sylabus"><font size="20"><b>Semester-I Subjects:</b> </font>\n\u2022Theory of Computation\n\u2022Operating Systems\n\u2022Human Computer Interaction\n\u2022Machine Learning\n\u2022Elective-I\n\u2022Operating Systems Lab\n\u2022Human Computer Interaction- Lab\n\u2022Laboratory Practice-I\n\u2022Seminar\n\u2022Audit Course-5 \n\n<font size="20"><b>Semester-II Subjects:</b></font>\n\u2022Computer Networks &amp; Security\n\u2022Data Science and Big Data Analytics\n\u2022Web Application Development\n\u2022Elective-II\n\u2022Internship\n\u2022Computer Networks &amp;Security-Lab\n\u2022DS &amp; BDA-Lab\n\u2022Laboratory\n\u2022Practice-II\n\u2022Audit Course-6\n</string>
    <string name="downTE"><u>Download Detailed Syllabus Of TE</u></string>
    <string name="be_sylabus"><font size="20"><b>Semester-I Subjects:</b> </font>\n\u2022Information and Storage Retrieval\n\u2022Software Project Management\n\u2022Deep Learning\n\u2022Elective-III\n\u2022Elective-IV\n\u2022Lab Practice-III\n\u2022Lab Practice-IV\n\u2022Project Stage-I\n\u2022Audit Course-7\n\n<font size="20"><b>Semester-II Subjects:</b></font>\n\u2022Distributed Systems\n\u2022Elective-V\n\u2022Elective-VI\n\u2022Startup and Entrepreneurship\n\u2022Lab Practice-V\n\u2022Lab Practice-VI\n\u2022Project Stage-II\n\u2022Audit Course-8\n</string>
    <string name="downBE"><u>Download Detailed Syllabus Of BE</u></string>
</resources>